# usv_ros

./: .gitignore  CMakeLists.txt  usv_simulation_results.csv
config/: params.yaml
devel/: .catkin  setup.sh
devel/lib/pkgconfig/: my_robot.pc  my_usv_pkg.pc
devel/share/my_robot/cmake/: my_robotConfig.cmake
devel/share/my_usv_pkg/cmake/: my_usv_pkgConfig.cmake
launch/: sim_usv.launch
rviz/: usv.rviz  usv_follow.rviz
scripts/: controller.py  controller_sim_node.py  lmpc_controller.py  path_planning.py  planner_node.py  rviz_visualizer.py  usv_dynamics.py  usv_node.py  utils_usv.py
src/my_robot/: CMakeLists.txt  package.xml
src/my_robot/scripts/: talker.py  talker.py.save
src/my_usv_pkg/: package.xml
src/my_usv_pkg/config/: params.yaml
src/my_usv_pkg/launch/: sim_usv.launch
src/my_usv_pkg/rviz/: usv.rviz
src/my_usv_pkg/scripts/: controller.py  lmpc_controller.py  path_planning.py
