<?xml version="1.0"?>
<package format="2">
  <name>my_usv_pkg</name>
  <version>0.0.1</version>
  <description>USV RRT* + ILOS + 3-DOF simulation (ROS Noetic)</description>

  <maintainer email="helga@todo.todo">helga</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- runtime & build deps (Python/rospy + msg types + RViz) -->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
</package>
